--- a/WebApplication1/nbproject/private/private.properties
+++ b/WebApplication1/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Jessica\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=C:/Users/Jessica/Desktop/librerias/tomcat/apache-tomcat-8.5.14
-j2ee.server.instance=tomcat80:home=C:\\Users\\Jessica\\Desktop\\librerias\\tomcat\\apache-tomcat-8.5.14
-user.properties.file=C:\\Users\\Jessica\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\Auxiliadora\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.home=C:/Users/Auxiliadora/Desktop/librerias/apache-tomcat-8.5.14
+j2ee.server.instance=tomcat80:home=C:\\Users\\Auxiliadora\\Desktop\\librerias\\apache-tomcat-8.5.14
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\Auxiliadora\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
